--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.14.2",
+    "jest": "^29.0.2",
+    "mongodb": "^4.9.1",
+    "mongodb-memory-server": "^8.9.1",
+    "mongoose": "^6.5.4",
+    "querystring": "^0.2.1",
+    "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.2.4"
   }
 }
